--- a/soccer.html
+++ b/soccer.html
@@ -30,8 +30,6 @@
 <h2 align = "center"> Soccer </h2>
 	
 	
-<center><button onclick = "toggle_div_fun('sectiontohide');"> Click here to view</button>
-	<div id = "sectiontohide"> This is the div </div></center>
 
 <center><figure>
  <img src="soccer.png" style = "width: 535px; height : 363px">
@@ -68,8 +66,8 @@
   <p> I love to challenge myself by playing possession/passing games with the rest of my team, as it builds the proper technique that I believe is essential to the position itself. Perhaps evidence of such a mentality manifests itself in media.</p> </div></center>
   
 <h3 align = "center"> Media </h3>
-  <p> Unfortunately, I only have media from my current season of school soccer; this season, our coach purchased Hudl to facilitate video recording of games. Credit to Hudl for compiling these clips, and hopefully I can combine these clips into some aggregate montage, or something. 
-  Some of these clips in here might be from my training, mostly because of how short the scholastic season is. </p>
+  <p> Unfortunately, I only have media from my current season of school soccer.
+  Some of these clips in here might be from my training, mostly in response to how short the scholastic season is. </p>
   
 <center><video align = 'center' width="640" height="480" controls>
   <source src="lynbrook2.mp4" type="video/mp4">
