--- a/soccer.html
+++ b/soccer.html
@@ -40,10 +40,10 @@
 
 	
 <p>I am a goalkeeper. I would love to play soccer in college, so hopefully someone in that area stumbles upon this page. This page, to some extent, is my
-  "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me.</p>
+  "recruiting website," wherein I compile some of my highlights as a goalkeeper as well as some general soccer-related information about me (hidden by the buttons for brevity).</p>
 
 <h3 align = "center"> Background </h3>
-  <center><button onclick = "toggle_div_fun('sectiontohide1');"> Click here to view </button>
+  <center><button onclick = "toggle_div_fun('sectiontohide1');"> Click here to view 'Background' </button>
 	<div id = "sectiontohide1"> <p> I have been playing soccer as a goalkeeper for close to 10 years now. For the majority of this decade, I have played club soccer with De Anza Force. 
     Throughout middle school, I developed greatly through the program's rigorous goalkeeper training, both via clinics and integration with the team.
     When I entered high school, I began to take the sport more seriously, and tried out for the Force I team, which played in Premier at the time. I was very fortunate
@@ -57,7 +57,7 @@
   
     
 <h3 align = "center"> Values/Philosophies </h3>
-  <center><button onclick = "toggle_div_fun('sectiontohide2');"> Click here to view </button>
+  <center><button onclick = "toggle_div_fun('sectiontohide2');"> Click here to view 'Values/Philosophies' </button>
 	<div id = "sectiontohide2"> <p> I don't claim to be all-knowing when it comes to goalkeeping, neither do I ever think of myself as the \(N\)th best goalkeeper in some domain. Goalkeeping is interesting for its volatile nature; how "good" a keeper appears is ultimately
     quite circumstantial, and I hesitate to make such associated judgments. What I do think is notable, however, is my general approach to the position.</p>
   <p> My vision of the keeper position derives from the "field player first, keeper second" mentality. Goalkeeping is uncannily like playing fullback with the extra privilege of the hands. A fullback throughout a game will receive many passes from 
