--- a/soccer.html
+++ b/soccer.html
@@ -9,10 +9,10 @@
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
   function toggle_div_fun(id){
 		var divelement = document.getElementById(id);
-		if(divelement.style.display == 'none')
-			divelement.style.display = 'block';
-		else
+		if(divelement.style.display == 'block')
 			divelement.style.display = 'none';
+		else
+			divelement.style.display = 'block';
 	}
 	</script>
 </head>
