--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,15 @@
 
   <h2 align = "center">My Projects </h2>
   
+  
+  Dimensionality Reduction in Machine Learning (01/2019)
+  <object width="400" height="400" data="paperfinal.pdf"></object>
+  This is a paper I recently published that culminates my work over the recent months. I worked with Professor Guangliang Chen from SJSU 
+  to review what exists in current literature and then test the theory against a data set. Some of the results were really quite surprsiing!
+  
+  I then was fortunate to given a presentation regarding some of my findings to a rather reputable set of people. I have attached the presentation
+  slides (wherein I delve deeper into the results, as opposed to scrutinizing the theory), below. 
+  
   <h3 align = "center"> Speed versus Gradient of My Bike Rides (10/2018) </h3>
   <h4 align = "center"> Project inspired by Jacob Nie </h4>
   
