--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,11 @@
 
   <h2 align = "center">My Projects </h2>
   
+  <h3 align = "center"> Dimensionality Reduction in Machine Learning (01/2019) </h3>
+
   
-  Dimensionality Reduction in Machine Learning (01/2019)
   
-  
+  <p>
   <object width="700" height="700" data="paperfinal.pdf"></object>
   
   
@@ -30,7 +31,7 @@
   
   I then was fortunate to given a presentation regarding some of my findings to a rather reputable set of people. I have attached the presentation
   slides (wherein I delve deeper into the results, as opposed to scrutinizing the theory), below. 
-  
+  </p>
   <h3 align = "center"> Speed versus Gradient of My Bike Rides (10/2018) </h3>
   <h4 align = "center"> Project inspired by Jacob Nie </h4>
   
