--- a/projects.html
+++ b/projects.html
@@ -23,14 +23,17 @@
   
   
   <p>
-  <object width="700" height="700" data="paperfinal.pdf"></object>
-  
-  
+  <object align = "center" width="700" height="700" data="paperfinal.pdf"></object>
+  </p>
+  <p>
   This is a paper I recently published that culminates my work over the recent months. I worked with Professor Guangliang Chen from SJSU 
   to review what exists in current literature and then test the theory against a data set. Some of the results were really quite surprsiing!
   
   I then was fortunate to given a presentation regarding some of my findings to a rather reputable set of people. I have attached the presentation
   slides (wherein I delve deeper into the results, as opposed to scrutinizing the theory), below. 
+    
+
+    
   </p>
   <h3 align = "center"> Speed versus Gradient of My Bike Rides (10/2018) </h3>
   <h4 align = "center"> Project inspired by Jacob Nie </h4>
