--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,8 @@
 
   
   
-  <p>
-  <object align = "center" width="700" height="700" data="paperfinal.pdf"></object>
+  <p align = "center">
+  <object width="500" height="500" data="paperfinal.pdf"></object>
   </p>
   <p>
   This is a paper I recently published that culminates my work over the recent months. I worked with Professor Guangliang Chen from SJSU 
