--- a/projects.html
+++ b/projects.html
@@ -31,9 +31,9 @@
   
   I then was fortunate to given a presentation regarding some of my findings to a rather reputable set of people. I have attached the presentation
   slides (wherein I delve deeper into the results, as opposed to scrutinizing the theory), below. 
-    
-
-    
+    </p>
+  <p align = "center">
+  <object width="300" height="300" data="jshs.pdf"></object>
   </p>
   <h3 align = "center"> Speed versus Gradient of My Bike Rides (10/2018) </h3>
   <h4 align = "center"> Project inspired by Jacob Nie </h4>
