--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
   <object width="500" height="500" data="paperfinal.pdf"></object>
   </p>
   <p>
-  This is a paper I recently published that culminates my work over the recent months. I worked with Professor Guangliang Chen from SJSU 
+  This is a paper I recently published that culminates my work over the recent months. I worked with <a href = 'http://www.sjsu.edu/faculty/guangliang.chen/index.html'>Professor Guangliang Chen from SJSU</a>
   to review what exists in current literature and then test the theory against a data set. Some of the results were really quite surprsiing!
   
   I then was fortunate to given a presentation regarding some of my findings to a rather reputable set of people. I have attached the presentation
