--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
   </p>
   <p>
   This is a paper I recently published that culminates my work over the recent months. I worked with <a href = 'http://www.sjsu.edu/faculty/guangliang.chen/index.html'>Professor Guangliang Chen from SJSU</a>
-  to review what exists in current literature and then test the theory against a data set. Some of the results were really quite surprsiing!
+  to review what exists in current literature and then test the theory against a data set. Some of the results were really quite surprising!
   
   I then was fortunate to given a presentation regarding some of my findings to a rather reputable set of people. I have attached the presentation
   slides (wherein I delve deeper into the results, as opposed to scrutinizing the theory), below. 
