--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
     model of the graph, which shows that I go slower on steeper hills (makes sense...). A heatmap is also shown below to explore what types of terrain and speeds I traverse
     the most often. </p>
   
-  <p> Obviously big residuals, because of measurement innaccuries and the general engineer-esque methods of my calculations.</p>
+  <p> Obviously big residuals, because of measurement inaccuracies and the general engineer-esque methods of my calculations.</p>
   <p> *Maybe I should use spherical coordinates here to be a little more accurate </p>
   <p> **By the Taylor expansion of the (arc)tangent function </p>
 
