--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,10 @@
 
   <h2 align = "center">My Projects </h2>
   
+    <h3 align = "center"> Using Monte-Carlo Simulation to Analyze the Effects of Electrostatic and Gravitational Forces 
+  on Statistical Mechanics (In Progress [02/2019])</h3>
+
+  
   <h3 align = "center"> Dimensionality Reduction in Machine Learning (01/2019) </h3>
 
   
@@ -33,7 +37,7 @@
   slides (wherein I delve deeper into the results, as opposed to scrutinizing the theory), below. 
     </p>
   <p align = "center">
-  <object width="300" height="300" data="jshs.pdf"></object>
+  <object width="400" height="400" data="jshs.pdf"></object>
   </p>
   <h3 align = "center"> Speed versus Gradient of My Bike Rides (10/2018) </h3>
   <h4 align = "center"> Project inspired by Jacob Nie </h4>
