--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,17 @@
     <h3 align = "center"> Using Monte-Carlo Simulation to Analyze the Effects of Electrostatic and Gravitational Forces 
   on Statistical Mechanics (In Progress [02/2019])</h3>
 
+  <p>
+  While studying for the USAPhO exam, I came across entropy as an area of study in thermodynamics. There are two "types" of entropy, one which observes the macroscopic states of
+    a certain gas (pressure, temperature, etc.), and another that treats the gas at the microscopic level. Because it is very difficult
+    to model atoms and molecules of a gas, a statistical model has been developed, which uses probability as a treatment for the concept of entropy.
+    
+  </p>
   
+  <p align = "center">
+  <img src="thermo.png">
+  </p>
+
   <h3 align = "center"> Dimensionality Reduction in Machine Learning (01/2019) </h3>
 
   
