--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,10 @@
   <img src="thermo.png">
   </p>
 
+  <p>
+    I was particularly excited to see something I really liked (discrete math!) being applied to something I sort of liked (physics is fun, but thermodynamics...), so I decided to delve 
+    a little deeper than what was simply presented with the textbook by posing some questions that I could tackle with programming, statistics, and physics.
+  </p>
   <h3 align = "center"> Dimensionality Reduction in Machine Learning (01/2019) </h3>
 
   
