--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
   </p>
   
   <p align = "center">
-  <img src="thermo.png">
+  <img src="thermo.png" width = "200" height = "200">
   </p>
 
   <p>
