--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
   <p>
   While studying for the USAPhO exam, I came across entropy as an area of study in thermodynamics. There are two "types" of entropy, one which observes the macroscopic states of
     a certain gas (pressure, temperature, etc.), and another that treats the gas at the microscopic level. Because it is very difficult
-    to model atoms and molecules of a gas, a statistical model has been developed, which uses probability as a treatment for the concept of entropy.
+    to model each individual atom and molecule of a gas, a statistical model has been developed, which uses probability as a treatment for the concept of entropy.
     
   </p>
   
@@ -35,6 +35,10 @@
   <p>
     I was particularly excited to see something I really liked (discrete math!) being applied to something I sort of liked (physics is fun, but thermodynamics...), so I decided to delve 
     a little deeper than what was simply presented with the textbook by posing some questions that I could tackle with programming, statistics, and physics.
+  </p>
+  
+  <p>
+    It may be worthwhile, for the sake of strong conceptual understanding of both me and my reader, to present the classical theory of statistical entropy. 
   </p>
   <h3 align = "center"> Dimensionality Reduction in Machine Learning (01/2019) </h3>
 
