--- a/about.html
+++ b/about.html
@@ -16,9 +16,8 @@
   </div>
 
   <h2 align = "center"> About Brandon Guo </h2>
-
   <p>I am a junior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my <a href = 'https://www.strava.com/athletes/34478762'>bike</a>, <a href = 'https://www.strava.com/athletes/34478762'>run</a>, and <a href = 'https://www.chess.com/member/bguo'>play chess</a>. I am an avid
-    listener of classical (orchestral and solo piano) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
+    listener of classical ( <a href = 'https://open.spotify.com/playlist/0RoLMQQQfoEFzqXkUlkXbt'>here's my playlist</a>) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
     enjoy playing soccer with <a href = 'http://norcalpremier.com/club/5051/team/1049916/'>De Anza Force</a> and <a href = 'http://www.maxpreps.com/high-schools/monta-vista-matadors-(cupertino,ca)/soccer-winter/home.htm'>my school team</a>, so much so that I dedicate a webpage to it. </p>
 
   <p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my 
