--- a/projects.html
+++ b/projects.html
@@ -28,10 +28,10 @@
     
   </p>
   
-  <p align = "center">
-  <img src="thermo.png" width = "300" height = "200">
-  </p>
-
+  <figure align = "center">
+    <img src='thermo.png'/>
+    <figcaption>Source: Facebook</figcaption>
+  </figure>
   <p>
     I was particularly excited to see something I really liked (discrete math!) being applied to something I sort of liked (physics is fun, but thermodynamics...), so I decided to delve 
     a little deeper than what was simply presented with the textbook by posing some questions that I could tackle with programming, statistics, and physics.
