--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     
   </p>
   
-  <figure align = "center">
+  <figure height = "200" width = "300" align = "center">
     <img src='thermo.png'/>
     <figcaption>Source: Facebook</figcaption>
   </figure>
