--- a/projects.html
+++ b/projects.html
@@ -27,8 +27,8 @@
     
   </p>
   
-  <figure height = "200" width = "300" align = "center">
-    <img src='thermo.png'/>
+  <figure align = "center">
+    <img src='thermo.png' height = "200" width = "300"/>
     <figcaption>Source: Facebook</figcaption>
   </figure>
   <p>
