--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
   <title>website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
+
 </head>
 
 <body>
@@ -25,6 +27,7 @@
     a certain gas (pressure, temperature, etc.), and another that treats the gas at the microscopic level. Because it is very difficult
     to model each individual atom and molecule of a gas, a statistical model has been developed, which uses probability as a treatment for the concept of entropy.
     
+    $$S = k_B \ln(\Omega)$$
   </p>
   
   <figure align = "center">
