--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
   <head>
-
+  
   <title>website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
+  <nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="generic.html">Generic</a></li>
+						<li><a href="elements.html">Elements</a></li>
+					</ul>
+				</nav>
 </head>
 
 <body>
@@ -13,6 +20,7 @@
   <a href="projects.html">Projects</a>
   <a href="other.html">Other Stuff</a>  
   </div>
+  
 
   <p align = "center">Hello, I'm Brandon Guo.</p>
   
