--- a/soccer.html
+++ b/soccer.html
@@ -4,7 +4,7 @@
 	
 <html>
 	<head>
-		<title>Brandon Guo</title>
+		<title>Soccer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
