--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   													<p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my  (current) <a href='Resume (11).pdf'>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
 
 
-													<p align = "center">If you would like to contact me, <a href="mailto:brandon49623@gmail.com">email me</a></p>
+													<p align>If you would like to contact me, <a href="mailto:brandon49623@gmail.com">email me</a></p>
 							</div>
 						</div>
 					</div>
@@ -60,8 +60,8 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
+						<li><a href="https://www.facebook.com/brandon.guo.589" class="icon fa-facebook"></a></li>
+						<li><a href="https://www.instagram.com/b.guoo/" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
