--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_TRACKING_ID');
+  gtag('config', 'UA-135081914-1');
 </script>
 		<title>Brandon Guo</title>
 		<meta charset="utf-8" />
