--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 							<div class="6u 12u$(medium)">
 								<header class="major">
 									<h2>About Me</h2>
+									<p>
+									 <img src="images/picture.png" style = "width: 263px; height : 216px"></p>
+
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
