--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,19 @@
 
 		<!-- Main -->
 		
+		<section id="four" class="wrapper">
+				<div class="container">
+
+					<header class="major special">
+						<h2>Research Project at SIMR</h2>
+						<p>6/10; In Progress</p>
+					</header>
+					  <p>
+				This summer, I will be spending the bulk of my time on a research project at SIMR (Stanford Institutes of Medical Research)! I will be interning in the bioinformatics lab, which nicely aligns with the rest of my past research. 
+    </p>
+
+				</div>
+			</section>
 		<section id="three" class="wrapper">
 				<div class="container">
 
@@ -43,6 +56,8 @@
 				So, until the conference itself in July, I am doing what I can to elevate my research project. The paper I have published goes over the theory in quite some detail, but only explores one practical application with one particular dataset. I want to extend my analysis to multiple datasets and perhaps that will allow me to present some statistics on my individual statistics (meta-statistics!). 
 				
 				To collect such data, I will devise a function that takes a dataset as a parameter and runs the necessary calculations. I will draw from a variety of data sources in hopes for a comprehensive image of the techniques in general. 
+				
+				I will upload my final poster once I finish presenting this July!
     </p>
 
 				</div>
