--- a/projects.html
+++ b/projects.html
@@ -34,13 +34,18 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Research Project at SIMR</h2>
+						<h2>How to stand still in an (centripetally) accelerating train</h2>
 						<p>6/10; In Progress</p>
 					</header>
 					  <p>
-				This summer, I will be spending the bulk of my time on a research project at SIMR (Stanford Institutes of Medical Research)! I will be interning in the bioinformatics lab, which nicely aligns with the rest of my past research. 
+				This summer, I am riding the Caltrain to SIMR (more on that later!). Going to SIMR, I ride the northbound train during rush hour, so the train is usually very crowded! I often stand in the middle of the carriage, so there are no supports for me to hold onto (poles, bars, etc.). This is problematic particularly when the train undergoes any curved motion.				</p>
+				<p>
+				There is a specific part on my journey where the train curves a bit, accelerating towards the east. For about three seconds, there is a noticeable (but currently not quantifiable) acceleration to the west felt by the passengers. This is likely the centrifugal force induced by the accelerating train. 
     </p>
-
+    			<p>
+    			I'd like to be able to stand still when this happens and am convinced there is a way supported by classical mechanics. 
+    			</p>
+    			
 				</div>
 			</section>
 		<section id="three" class="wrapper">
