--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,10 @@
 				To collect such data, I will devise a function that takes a dataset as a parameter and runs the necessary calculations. I will draw from a variety of data sources in hopes for a comprehensive image of the techniques in general. 
 				
 				I will upload my final poster once I finish presenting this July!
+				
+				  <p align = "center">
+  <object width="700" height="400" data="JSMposter.pdf"></object>
+  </p>
     </p>
 
 				</div>
