--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Hi, I'm Brandon Guo.</h2>
-				<p>I'm currently a junior at Monta Vista High School.<br /> Scroll or use the bar to explore my site.</p>
+				<p>I'm currently a senior at Monta Vista High School.<br /> Scroll or use the bar to explore my site.</p>
 			</section>
 
 			<!-- One -->
@@ -55,7 +55,7 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-													<p>I am a junior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my <a href = 'https://www.strava.com/athletes/34478762'>bike</a>, <a href = 'https://www.strava.com/athletes/34478762'>run</a>, and <a href = 'https://www.chess.com/member/bguo'>play chess</a>. I am an avid
+													<p>I am a senior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my <a href = 'https://www.strava.com/athletes/34478762'>bike</a>, <a href = 'https://www.strava.com/athletes/34478762'>run</a>, and <a href = 'https://www.chess.com/member/bguo'>play chess</a>. I am an avid
    													 listener of classical (<a href = 'https://open.spotify.com/playlist/0RoLMQQQfoEFzqXkUlkXbt'>here's my playlist</a>) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
    													 enjoy playing soccer with <a href = 'http://norcalpremier.com/club/5051/team/1049916/'>De Anza Force</a> and <a href = 'http://www.maxpreps.com/high-schools/monta-vista-matadors-(cupertino,ca)/soccer-winter/home.htm'>my school team</a>, so much so that I dedicate a webpage to it. </p>
 
@@ -71,10 +71,6 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-					<ul class="icons">
-						<li><a href="https://www.facebook.com/brandon.guo.589" class="icon fa-facebook"></a></li>
-						<li><a href="https://www.instagram.com/b.guoo/" class="icon fa-instagram"></a></li>
-					</ul>
 					<ul class="copyright">
 						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>
