--- a/projects.html
+++ b/projects.html
@@ -34,19 +34,20 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>How to stand still in an (centripetally) accelerating train</h2>
-						<p>6/10; In Progress</p>
+						<h2>Young American Policy Advocates (YAPA) Summer Camp</h2>
+						<p>7/14</p>
 					</header>
 					  <p>
-				This summer, I am riding the Caltrain to SIMR (more on that later!). Going to SIMR, I ride the northbound train during rush hour, so the train is usually very crowded! I often stand in the middle of the carriage, so there are no supports for me to hold onto (poles, bars, etc.). This is problematic particularly when the train undergoes any curved motion.				</p>
-				<p>
-				There is a specific part on my journey where the train curves a bit, accelerating towards the east. For about three seconds, there is a noticeable (but currently not quantifiable) acceleration to the west felt by the passengers. This is likely the centrifugal force induced by the accelerating train. 
-    </p>
-    			<p>
-    			I'd like to be able to stand still when this happens and am convinced there is a way supported by classical mechanics. 
-    			</p>
-    			
+					 This weekend concludes the first successful year of the YAPA summer program! I had the privilege of working with some very bright individuals to help put this camp together. We had a total of about thirty students chosen from a pool of sixty applicants. Information about the camp itself can be found <a href = "https://yapadvocates.wixsite.com/home/mini-camp-1">here</a>.
+					</p>
+					<p>
+					My main role, apart from planning the program, was to design a series of government lectures from the city level going upward. Because YAPA is focused on creating policy, hoping to empower students to submit bills and white papers of their own, it is cruicial they understand how government works. I've included the presentation I created here, which culminates a lot of the things I too have learnt through this experience. It is by no means flawless, and I'd love to hear about ways to improve it.
+					</p>
+    			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRZOzo9y58fZVi4NIsg8eCSp0X_C-UPmapzpWO9aeq9-AWez6KPbEtDxmNXg5kZO-C0Tta13YWlyKAM/embed?start=false&loop=true&delayms=3000" frameborder="0" width="700" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				</div>
+				<p>
+					There are some pretty cool pictures of my lectures/the camp itself and I'd love to share those too, when I get accesss to them. 
+					</p>
 			</section>
 		<section id="three" class="wrapper">
 				<div class="container">
