--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 					</p>
     			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRZOzo9y58fZVi4NIsg8eCSp0X_C-UPmapzpWO9aeq9-AWez6KPbEtDxmNXg5kZO-C0Tta13YWlyKAM/embed?start=false&loop=true&delayms=3000" frameborder="0" width="700" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				<p>
-					There are some pretty cool pictures of my lectures/the camp itself and I'd love to share those too, when I get accesss to them. 
+					There are some pretty cool pictures of my lectures/the camp itself and I'd love to share those too, when I get access to them. 
 					</p> 
 				</div>
 				
