--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    													 listener of classical (<a href = 'https://open.spotify.com/playlist/0RoLMQQQfoEFzqXkUlkXbt'>here's my playlist</a>) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
    													 enjoy playing soccer with <a href = 'http://norcalpremier.com/club/5051/team/1049916/'>De Anza Force</a> and <a href = 'http://www.maxpreps.com/high-schools/monta-vista-matadors-(cupertino,ca)/soccer-winter/home.htm'>my school team</a>, so much so that I dedicate a webpage to it. </p>
 
-  													<p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my  (current) <a href='resume_june_2019.pdf'>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
+  													<p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my  (current) <a href='resume.pdf'>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
 
 
 													<p align>If you would like to contact me, <a href="mailto:brandon49623@gmail.com">email me</a></p>
