--- a/about.html
+++ b/about.html
@@ -1,29 +1,50 @@
+<!DOCTYPE HTML>
+<!--
+	Spatial by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-  <head>
-
-  <title>website</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
-</head>
-
-<body>
-  <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a href="about.html">About Me</a>
-  <a href="soccer.html">Soccer</a>
-  <a href="projects.html">Projects</a>
-  <a href="other.html">Other Stuff</a>  
-  </div>
-
-  <h2 align = "center"> About Brandon Guo </h2>
-  <p>I am a junior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my <a href = 'https://www.strava.com/athletes/34478762'>bike</a>, <a href = 'https://www.strava.com/athletes/34478762'>run</a>, and <a href = 'https://www.chess.com/member/bguo'>play chess</a>. I am an avid
-    listener of classical (<a href = 'https://open.spotify.com/playlist/0RoLMQQQfoEFzqXkUlkXbt'>here's my playlist</a>) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
-    enjoy playing soccer with <a href = 'http://norcalpremier.com/club/5051/team/1049916/'>De Anza Force</a> and <a href = 'http://www.maxpreps.com/high-schools/monta-vista-matadors-(cupertino,ca)/soccer-winter/home.htm'>my school team</a>, so much so that I dedicate a webpage to it. </p>
-
-  <p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my 
-    (current) <a href='Resume (11).pdf'>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
+	<head>
+		<title>Projects</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
+	</head>
+	<body>
 
 
 
+		<!-- Main -->
+<center>
+	<section id="one" class="wrapper style1">
 
-</body></html>
+							<div class="6u 12u$(medium)">
+								<header class="major">
+									<h2>About Me</h2>
+									<p>
+									 <img src="images/picture.png" style = "width: 263px; height : 216px"></p>
+
+								</header>
+							</div>
+							<div class>
+													<p>I am a senior at MVHS and live in Saratoga, CA. My hobbies come and go; currently, I like to ride my <a href = 'https://www.strava.com/athletes/34478762'>bike</a>, <a href = 'https://www.strava.com/athletes/34478762'>run</a>, and <a href = 'https://www.chess.com/member/bguo'>play chess</a>. I am an avid
+   													 listener of classical (<a href = 'https://open.spotify.com/playlist/0RoLMQQQfoEFzqXkUlkXbt'>here's my playlist</a>) music, though I seldom perform anymore, other than occasionally with my local orchestra. I also 
+   													 enjoy playing soccer with <a href = 'http://norcalpremier.com/club/5051/team/1049916/'>De Anza Force</a> and <a href = 'http://www.maxpreps.com/high-schools/monta-vista-matadors-(cupertino,ca)/soccer-winter/home.htm'>my school team</a>, so much so that I dedicate a webpage to it. </p>
+
+  													<p>In ten years' time, I would like to pursue an advanced degree in statistics and become a quantitative analyst. Much of what appears on my  (current) <a href='Resume.pdf'>resume</a> intends to reflect such goals of mine. But of course, I am still a high schooler, so I try to keep an open mind.</p>
+
+
+													<p align>If you would like to contact me, <a href="mailto:brandon49623@gmail.com">email me</a></p>
+							</div>
+
+				</section>
+				</center>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
