--- a/soccer.html
+++ b/soccer.html
@@ -7,23 +7,10 @@
 		<title>Soccer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets1/css/main.css" />
 	</head>
 	<body class="landing">
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Brandon Guo</a></strong> </h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="projects.html">Projects</a></li>
-						<li><a href="soccer.html">Soccer</a></li>
-					</ul>
-				</nav>
-			</header>
-
-			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
   
 	
@@ -31,7 +18,7 @@
 <p> </p>
 <p></br> </br> </p>
 <center><figure>
- <img src="soccer.png" style = "width: 535px; height : 363px">
+ <img src="images/thumbs/soccer.png" style = "width: 535px; height : 363px">
  <figcaption>
  My school team before a home game against Fremont High School (Jan 9, 2018).
  </figcaption>
@@ -72,27 +59,27 @@
   Some of these clips in here might be from my training, mostly in response to how short the scholastic season is. </p>
   
 <center><video align = 'center' width="640" height="480" controls>
-  <source src="lynbrook2.mp4" type="video/mp4">
+  <source src="images/lynbrook2.mp4" type="video/mp4">
 Your browser does not support the video tag.
   </video></center>
   
 <center><video align = 'center' width="640" height="480" controls>
-  <source src="lynbrook1.mp4" type="video/mp4">
+  <source src="images/lynbrook1.mp4" type="video/mp4">
 Your browser does not support the video tag.
   </video></center>
   
 <center><video align = 'center' width="640" height="480" controls>
-  <source src="gunn1.mp4" type="video/mp4">
+  <source src="images/gunn1.mp4" type="video/mp4">
 Your browser does not support the video tag.
   </video></center>
  
 <center><video align = 'center' width="640" height="480" controls>
-  <source src="gunn2.mp4" type="video/mp4">
+  <source src="images/gunn2.mp4" type="video/mp4">
 Your browser does not support the video tag.
   </video></center>
 
 <center><video align = 'center' width="640" height="480" controls>
-  <source src="fremont1.mp4" type="video/mp4">
+  <source src="images/fremont1.mp4" type="video/mp4">
 Your browser does not support the video tag.
   </video></center>
 
