--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 									
 								</div>
 								<div>
+								<a href="projects.html#four">
+										<img src="images/thumbs/hiveplot.png" alt="" />
+										<h3>Networks Paper (from SIMR, current!)</h3>
+									</a>
 									<a href="projects.html#five">
 										<img src="images/thumbs/simr-poster.jpg" alt="" />
 										<h3>Stanford Institutes of Medicine Research (SIMR)</h3>
