--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									
 								</div>
 								<div>
-								<a href="projects.html#four">
+								<a href="projects.html#six">
 										<img src="images/thumbs/hiveplot.png" alt="" />
 										<h3>Networks Paper (from SIMR, current!)</h3>
 									</a>
