--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>Hi, I'm <strong>Brandon Guo</strong>. Click on the buttons below to learn more about me.</h1>
+						<h1>Hi, I'm <strong>Brandon Guo</strong>. Scroll down to find out what I'm up to!</h1>
 						<ul class="icons">
 							<li><a href="about.html" class=><span class="label">About</span></a></li>
 							<li><a href="images/resume.pdf" class=""><span class="label">Resume</span></a></li>
@@ -37,7 +37,10 @@
 										<img src="images/thumbs/yapa.jpg" alt="" />
 										<h3>Young American Policy Advocates (YAPA)</h3>
 									</a>
-									
+									<a href="soccer.html">
+										<img src="images/thumbs/soccer.png" alt="" />
+										<h3>Soccer</h3>
+									</a>
 								</div>
 								<div>
 								<a href="projects.html#six">
@@ -51,9 +54,9 @@
 									
 								</div>
 								<div>
-									<a href="soccer.html">
-										<img src="images/thumbs/soccer.png" alt="" />
-										<h3>Soccer</h3>
+									<a href="projects.html#seven">
+										<img src="images/thumbs/state.png" alt="" />
+										<h3>State Bill Proposal</h3>
 									</a>
 									<a href="projects.html#three">
 										<img src="images/thumbs/clusters.png" alt="" />
