--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 										<img src="images/thumbs/hiveplot.png" alt="" />
 										<h3>Networks Paper (from SIMR, current!)</h3>
 									</a>
+									<a href="projects.html#eight">
+										<img src="images/thumbs/titleslide.jpg" alt="" />
+										<h3>AMIA 2019</h3>
+									</a>
 									<a href="projects.html#five">
 										<img src="images/thumbs/simr-poster.jpg" alt="" />
 										<h3>Stanford Institutes of Medicine Research (SIMR)</h3>
